recycleView, context and Adapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="Affirmation01">A vida e uma caixa preta nunca saberemos o seu real significado.</string>
     <string name="Affirmation02">Não deveríamos temer a morte, mais sim a vida.</string>
     <string name="Affirmation03">O ruim de mentir, com tempo você acaba acreditando nas suas próprias mentiras.</string>
-    <string name="Affirmation04">A vida e uma caixa preta nunca saberemos o seu real significado.</string>
+    <string name="Affirmation04">O tamanho não importa, o que importa é saber usar</string>
     <string name="Affirmation05">Cuide de si mesmo como cuidaria de alguém que você ama.</string>
     <string name="Affirmation06">As vezes me sinto como não fosse deste mundo, acho que a maioria se sente assim desse modo.</string>
 
